Improving ForgotPwd structure
